Git_WGBH_QC/src/objects/WGBH_PB5_UPLOAD__c.object
<CustomObject>
    <fields>
        <fullName>PB5_SHIP_TO_STREET_NAME__c</fullName>
        <label>PB5_SHIP_TO_STREET_NAME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_STREET_NUMBER__c</fullName>
        <label>PB5_SHIP_TO_STREET_NUMBER</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_SUFFIX__c</fullName>
        <label>PB5_SHIP_TO_SUFFIX</label>
        <picklist>
            <picklistValues>
                <fullName>GET PICK LIST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_TITLE__c</fullName>
        <label>PB5_SHIP_TO_TITLE</label>
        <picklist>
            <picklistValues>
                <fullName>GET PICK LIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Honorable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admiral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_ZIP_CODE__c</fullName>
        <label>PB5_SHIP_TO_ZIP_CODE</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO_ZIP_EXTENSION__c</fullName>
        <label>PB5_SHIP_TO_ZIP_EXTENSION</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PB5_SHIP_TO__c</fullName>
        <label>PB5_SHIP_TO_CITY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SOURCE__c</fullName>
        <description>SOURCE CODE OF PLEDGE. MAPS TOL UL_BATCH_DETAIL.SOURCE</description>
        <label>PB5_SOURCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_START_CDATE_10__c</fullName>
        <label>PB5_START_CDATE_10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_START_CDATE_1__c</fullName>
        <label>PB5_START_CDATE_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_START_CDATE_2__c</fullName>
        <label>PB5_START_CDATE_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_STATE__c</fullName>
        <description>State of preferred Address</description>
        <label>PB5_STATE</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_STATION_SOURCE__c</fullName>
        <description>Which station is the upload for</description>
        <label>PB5_STATION_SOURCE</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_STATION_SUPPORT__c</fullName>
        <description>THE LEAD SOURCE. MAPS TO: UL_BATCH_DETAIL.STATION_SUPPORT. ASSIGNED BY PARSING PB5_SOURCE IF NO VALUE</description>
        <label>PB5_STATION_SUPPORT</label>
        <picklist>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television and Classical RadioC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television and Radio News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_STREET_1__c</fullName>
        <description>Name of street in preferred address. Maps to: UL_ADDRESSES.STEET_NAME</description>
        <label>PB5_STREET_1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_STREET_NAME__c</fullName>
        <description>Name of street in preferred address. Maps to: UL_ADDRESSES.STEET_NAME</description>
        <label>PB5_STREET_NAME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_STREET_NUMBER__c</fullName>
        <description>Street number of preferred address. Maps to: UL_ADDRESSES.STREET_NUMBER</description>
        <label>PB5_STREET_NUMBER</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_SUFFIX_2__c</fullName>
        <label>PB5_SUFFIX_2</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.D.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R.N.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_SUFFIX__c</fullName>
        <description>Suffix of name on household, contact, org. Maps to UL_NAMES.SUFFIX</description>
        <label>PB5_SUFFIX</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.D.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R.N.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_Stage__c</fullName>
        <label>PB5 Stage</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_EXTENSION_1__c</fullName>
        <description>PREFERRED PHOEN EXTENSION. MAPS TO: UL_TELEPHONES.TELEPHONE_EXTENSION</description>
        <label>PB5_TELEPHONE_EXTENSION_1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_EXTENSION_2__c</fullName>
        <description>The second phone number in the file</description>
        <label>PB5_TELEPHONE_EXTENSION_2</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_EXTENSION__c</fullName>
        <description>PREFERRED PHOEN EXTENSION. MAPS TO: UL_TELEPHONES.TELEPHONE_EXTENSION</description>
        <label>PB5_TELEPHONE_EXTENSION</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_NUMBER_1__c</fullName>
        <description>prefrred phone number. Maps to: UL_TELEPHONES.TELEPHONE_NUMBER</description>
        <label>PB5_TELEPHONE_NUMBER_1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_NUMBER_2__c</fullName>
        <description>The second telephone number in the file</description>
        <label>PB5_TELEPHONE_NUMBER_2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_NUMBER__c</fullName>
        <description>prefrred phone number. Maps to: UL_TELEPHONES.TELEPHONE_NUMBER</description>
        <label>PB5_TELEPHONE_NUMBER</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_TYPE_1__c</fullName>
        <description>PREFERRED PHONE TYPE. MAPS TO: UL_TELEPHONE.TELEPHONE_TYPE</description>
        <label>PB5_TELEPHONE_TYPE_1</label>
        <picklist>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_TELEPHONE_TYPE_2__c</fullName>
        <description>The type of the second phone number in the file.</description>
        <label>PB5_TELEPHONE_TYPE_2</label>
        <picklist>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_TELE__c</fullName>
        <description>PREFERRED PHONE TYPE. MAPS TO: UL_TELEPHONE.TELEPHONE_TYPE</description>
        <label>PB5_TELEPHONE_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_TITLE_2__c</fullName>
        <description>Title of the second name in the file</description>
        <label>PB5_TITLE_2</label>
        <picklist>
            <picklistValues>
                <fullName>Admiral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonel &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs. &amp; Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_TITLE__c</fullName>
        <description>Maps to: UL_NAMES.TITLE</description>
        <label>PB5_TITLE</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverend &amp; Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Honorable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. &amp; Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admiral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sergeant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_TRANSACTION_TYPE__c</fullName>
        <label>PB5_TRANSACTION_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>PLEDGE WITH PAYMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLEDGE NO PAYMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAYMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLKIMBIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_UPLOAD_FILENAME__c</fullName>
        <description>The name of the file that was processed to upload this record</description>
        <label>PB5_UPLOAD_FILENAME</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_UPLOAD_SOURCE__c</fullName>
        <label>PB5_UPLOAD_SOURCE</label>
        <picklist>
            <picklistValues>
                <fullName>ACD_PLEDGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACD_TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUCTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONVIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIMBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOCKBOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tammy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_ZIP_CODE__c</fullName>
        <description>zip code of preferred address. Maps to: UL_ADDRESSES.ZIP_CODE</description>
        <label>PB5_ZIP_CODE</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ZIP_EXTENSION__c</fullName>
        <description>zip extension of preferred address</description>
        <label>PB5_ZIP_EXTENSION</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SF_Duplicate_ID__c</fullName>
        <label>SF Duplicate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Purpose__c</fullName>
        <label>Transaction_Purpose</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transaction_date__c</fullName>
        <label>transaction_date</label>
        <type>DateTime</type>
    </fields>
    <label>PB5 Upload</label>
    <listViews>
        <fullName>ACD_PLEDGE</fullName>
        <columns>Flag_for_Review__c</columns>
        <columns>Flag_Review_Reason__c</columns>
        <columns>PB5_IS_PROCESSED__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>PB5_SFDC_ID__c</columns>
        <columns>PB5_SOURCE__c</columns>
        <columns>PB5_FIRST_NAME__c</columns>
        <columns>PB5_LAST_NAME__c</columns>
        <columns>PB5_PAYMENT_AMOUNT__c</columns>
        <columns>PB5_PAYMENT_FREQUENCY__c</columns>
        <columns>PB5_PAYMENT_METHOD__c</columns>
        <columns>PB5_PAYMENTS_IN_SCHEDULE__c</columns>
        <columns>PB5_PLEDGE_AMOUNT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PB5_UPLOAD_SOURCE__c</field>
            <operation>equals</operation>
            <value>ACD_PLEDGE</value>
        </filters>
        <label>ACD_PLEDGE</label>
    </listViews>
    <listViews>
        <fullName>ACD_PLEDGE_2DAyReview</fullName>
        <columns>PB5_FIRST_NAME__c</columns>
        <columns>PB5_LAST_NAME__c</columns>
        <columns>PB5_GIFT_CDATE__c</columns>
        <columns>Flag_for_Review__c</columns>
        <columns>Flag_Review_Reason__c</columns>
        <columns>PB5_IS_PROCESSED__c</columns>
        <columns>NAME</columns>
        <columns>PB5_SFDC_ID__c</columns>
        <columns>PB5_SOURCE__c</columns>
        <columns>PB5_PAYMENT_AMOUNT__c</columns>
        <columns>PB5_PAYMENT_FREQUENCY__c</columns>
        <columns>PB5_PAYMENT_METHOD__c</columns>
        <columns>PB5_PAYMENTS_IN_SCHEDULE__c</columns>
        <columns>PB5_PLEDGE_AMOUNT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PB5_UPLOAD_SOURCE__c</field>
            <operation>equals</operation>
            <value>ACD_PLEDGE</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Flag_for_Review__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ACD_PLEDGE  For Reveiw TODAY</label>
    </listViews>
</CustomObject>